--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ x-backend-templates:
     payment-processor.fallback.url: "http://payment-processor-fallback:8080"
     SPRING_APPLICATION_JSON: > 
       {
-        "server.port":9999,
+        "server.port":8080,
         "spring.application.name": "ccs1201-rinha-backend-2025",
         "spring.threads.virtual.enabled": false,
         "server.servlet.session.persistent": false,
@@ -38,9 +38,8 @@ x-backend-templates:
         "spring.mvc.dispatch-options-request": false,
         "spring.mvc.dispatch-trace-request": false,
         "spring.mvc.log-request-details": false,
-        "spring.mvc.log-resolved-exception": false,
-        "server.undertow.threads.io": 32,
-        "server.undertow.threads.worker": 64,
+        "server.undertow.threads.io": 2,
+        "server.undertow.threads.worker": 8,
         "server.undertow.buffer-size": 1024,
         "server.undertow.direct-buffers": true,
         "server.undertow.max-http-post-size": "1KB",
@@ -56,7 +55,8 @@ x-backend-templates:
         "spring.datasource.hikari.connection-init-sql": "SELECT 1 WHERE 1 = 1;",
         "logging.level.br.com.ccs.rinha": "info",
         "payment-processor.default.url": "http://payment-processor-default:8080",
-        "payment-processor.fallback.url": "http://payment-processor-fallback:8080"
+        "payment-processor.fallback.url": "http://payment-processor-fallback:8080",
+        "spring.mvc.log-resolved-exception": false
       }
 
 #####################################################
