--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,31 @@
 spring.application.name=rinha
-spring.datasource.url= jdbc:postgresql://localhost:54323/rinha
-spring.datasource.username= rinha
-spring.datasource.password= rinha
-spring.datasource.hikari.maximum-pool-size= 10
-spring.datasource.hikari.minimum-idle= 10
-spring.datasource.hikari.connection-timeout= 5000
-spring.datasource.hikari.idle-timeout= 300000
-spring.datasource.hikari.max-lifetime= 600000
-spring.datasource.hikari.connection-init-sql= SELECT 1 WHERE 1 = 1;
-logging.level.br.com.ccs.rinha= info
+spring.datasource.url=jdbc:postgresql://localhost:54323/rinha
+spring.datasource.username=rinha
+spring.datasource.password=rinha
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=5000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-init-sql=SELECT 1 WHERE 1 = 1;
+spring.r2dbc.url=r2dbc:postgresql://localhost:54323/rinha
+spring.r2dbc.username=rinha
+spring.r2dbc.password=rinha
+spring.r2dbc.pool.initial-size=8
+spring.r2dbc.pool.max-size=8
+spring.r2dbc.sql.init.mode=always
+
+#############################################
+server.undertow.threads.io=2
+server.undertow.threads.worker=8
+server.undertow.buffer-size=1024
+server.undertow.direct-buffers=true
+server.undertow.max-http-post-size=1KB
+server.undertow.no-request-timeout=5000
+##############################################
+
+logging.level.br.com.ccs.rinha=info
+logging.level.br.com.ccs.rinha.repository.JdbcPaymentRepository=off
+logging.level.br.com.ccs.rinha.service.WebClientPaymentProcessorClientService=error
+logging.level.org.springframework.web.reactive.function.client=off
+logging.level.root=off
