--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,5 @@ server.undertow.no-request-timeout=5000
 logging.level.br.com.ccs.rinha=info
 logging.level.br.com.ccs.rinha.repository.JdbcPaymentRepository=off
 logging.level.br.com.ccs.rinha.service.WebClientPaymentProcessorClientService=error
-logging.level.org.springframework.web.reactive.function.client=off
+#logging.level.org.springframework.web.reactive.function.client=off
 logging.level.root=off
