--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ server.undertow.max-http-post-size=1KB
 server.undertow.no-request-timeout=5000
 ##############################################
 
-logging.level.root=info
+logging.level.root=off
 logging.level.br.com.ccs.rinha=info
-logging.level.br.com.ccs.rinha.service.PaymentProcessorClientService=info
+logging.level.br.com.ccs.rinha.repository.JdbcPaymentRepository=info
+logging.level.br.com.ccs.rinha.service.PaymentProcessorClientServiceReactive=info
