--- a/nginx.conf
+++ b/nginx.conf
@@ -26,13 +26,14 @@ http {
 
     access_log off;
     sendfile on;
+    tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 30;
 
     upstream backend {
         server backend-api1:8080;
         server backend-api2:8080;
-        keepalive 32;
+        keepalive 100;
     }
 
     server {
